--- a/app/currency/templates/rate_delete.html
+++ b/app/currency/templates/rate_delete.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <p>
-    Do you want to delete `Rate` with id '{{ rate.id }}'
+    Do you want to delete `Rate` with id '{{ object.id }}'
     </p>
     <form method="post">
     {% csrf_token %}
