--- a/app/currency/templates/rate_list.html
+++ b/app/currency/templates/rate_list.html
@@ -7,6 +7,7 @@
           Id: {{ rate.id }}
           sale: {{ rate.sale }}
           Buy: {{ rate.buy }}
+          Type: {{ rate.get_type_display }}
           Created: {{ rate.created|date:"Y-m-d" }}
           <a href="{% url 'currency:rate_detail' rate.id %}">Details</a>
           <a href="{% url 'currency:rate_update' rate.id %}">Edit</a>
