--- a/app/currency/templates/includes/navbar.html
+++ b/app/currency/templates/includes/navbar.html
@@ -1,5 +1,6 @@
 <nav>
     <a href="{% url 'index' %}">Home</a>
     <a href="{% url 'currency:rate_list' %}">Rate List</a>
+    <a href="{% url 'currency:contactus_create' %}">Contact Us</a>
 </nav>
 {# url == reverse #}
