--- a/app/currency/templates/includes/navbar.html
+++ b/app/currency/templates/includes/navbar.html
@@ -2,5 +2,16 @@
     <a href="{% url 'index' %}">Home</a>
     <a href="{% url 'currency:rate_list' %}">Rate List</a>
     <a href="{% url 'currency:contactus_create' %}">Contact Us</a>
+
+    {% if request.user.is_authenticated %}
+        Name: {{ request.user.first_name }} {{ request.user.last_name }}
+        ID: {{ request.user.id }}
+        <a href="{% url 'accounts:my-profile' %}">My Profile</a>
+        <a href="{% url 'logout' %}">Logout</a>
+    {% else %}
+        <a href="">Sign Up</a>
+        <a href="{% url 'login' %}">Login</a>
+    {% endif %}
 </nav>
+
 {# url == reverse #}
