--- a/app/currency/templates/includes/navbar.html
+++ b/app/currency/templates/includes/navbar.html
@@ -9,7 +9,7 @@
         <a href="{% url 'accounts:my-profile' %}">My Profile</a>
         <a href="{% url 'logout' %}">Logout</a>
     {% else %}
-        <a href="">Sign Up</a>
+        <a href="{% url 'accounts:signup' %}">Sign Up</a>
         <a href="{% url 'login' %}">Login</a>
     {% endif %}
 </nav>
