--- a/app/currency/templates/rate_list.html
+++ b/app/currency/templates/rate_list.html
@@ -14,9 +14,10 @@
                 <tr>
                     <th scope="col">Id</th>
                     <th scope="col">Source Name</th>
+                    <th scope="col">Base Currency</th>
+                    <th scope="col">Type</th>
                     <th scope="col">Buy</th>
                     <th scope="col">Sale</th>
-                    <th scope="col">Type</th>
                     <th scope="col">Created</th>
                     <th scope="col">Actions</th>
                 </tr>
@@ -26,9 +27,10 @@
                     <tr>
                         <th scope="row">{{ rate.id }}</th>
                         <td>{{ rate.source.name }}</td>
+                        <td>{{ rate.get_base_type_display }}</td>
+                        <td>{{ rate.get_type_display }}</td>
                         <td>{{ rate.buy }}</td>
                         <td>{{ rate.sale }}</td>
-                        <td>{{ rate.get_type_display }}</td>
                         <td>{{ rate.created }}</td>
                         <td>
                             <div class="dropdown">
