--- a/app/currency/templates/index.html
+++ b/app/currency/templates/index.html
@@ -3,6 +3,7 @@
 {% block content %}
 <div>Hello</div>
 <div>
+    {{ BASE_PRODUCT_PRICE }}
     Welcome To currency Project.
 </div>
 {% endblock content %}
