--- a/app/currency/templates/rate_detail.html
+++ b/app/currency/templates/rate_detail.html
@@ -4,6 +4,7 @@
     <p>
     Id: {{ rate.id }}<br>
     Sale: {{ rate.sale }}<br>
+    Sale: {{ rate.created }}<br>
     ...
     </p>
 {% endblock content %}
