--- a/app/currency/templates/rate_list.html
+++ b/app/currency/templates/rate_list.html
@@ -14,6 +14,8 @@
         </button>
     </form>
 
+    {{ BASE_PRODUCT_PRICE }}
+
     <div class="row">
         <div class="col">
             <table class="table table-striped">
